Side nav fix: - Z-index property-k beállítása.

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ nav.navbar ul::after {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   top: 0;
   left: 0;
   background: #111;
@@ -135,7 +135,7 @@ ul.show {
 
 .hide-sidenav {
   position: absolute;
-  z-index: 1000;
+  z-index: 9;
   width: 100%;
   height: 100%;
 }
