--- a/scss/_side-nav.scss
+++ b/scss/_side-nav.scss
@@ -2,7 +2,7 @@
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
     top: 0;
     left: 0;
     background: #111;
@@ -66,7 +66,7 @@ ul.show{
 
 .hide-sidenav{
     position: absolute;
-    z-index: 1000;
+    z-index: 9;
     width: 100%;
     height: 100%;
 }
